# DeLoRaN

./: .gitignore  Cargo.toml  README.md  gateway.csv  gatewayJammed.csv  script.js  todo
application-server/: Cargo.toml
application-server/src/: lib.rs
application-server/src/utils/: error.rs
application_server/: Cargo.toml
application_server/src/: application_server.rs  main.rs
application_server/src/utils/: mod.rs
blockchain_api/: Cargo.toml
blockchain_api/src/: convergence.rs  exec_bridge.rs  http_bridge.rs  lib.rs  main.rs  mock_bridge.rs  tcp_bridge.rs  udp_bridge.rs
consensus/: Cargo.toml  build.rs
consensus/src/: consensus_client.rs  consensus_server.rs  lib.rs  main.rs  malicious_consensus_server.rs
consensus/src/protos/: messages.proto
fake_device/: Cargo.toml
fake_device/configs/: 0_config.json  1_config.json  create_commands.json  temp.json
fake_device/src/: communicators.rs  configs.rs  main.rs  mock_device.rs  old_main.rs  radio_device.rs  tcp_device.rs
lorawan/: Cargo.toml  appunti.txt
lorawan/src/: lib.rs
lorawan/src/device/: mod.rs  proprietary_payload_handlers.rs  session_context.rs
lorawan/src/encryption/: key.rs  mod.rs
lorawan/src/lorawan_packet/: fctrl.rs  fhdr.rs  join.rs  mac_commands.rs  mac_payload.rs  mhdr.rs  mod.rs  payload.rs
lorawan/src/physical_parameters/: mod.rs
lorawan/src/regional_parameters/: region.rs
lorawan/src/utils/: errors.rs  eui.rs  mod.rs  traits.rs
lorawan/tests/: tests.rs
lorawan_device/: Cargo.toml
lorawan_device/configs/: 0_config.json  1_config.json  create_commands.json
lorawan_device/src/: colosseum_device.rs  communicator.rs  communicators.rs  configs.rs  debug_device.rs  lib.rs  lorawan_device.rs  main.rs  mock_device.rs  old_main.rs  radio_device.rs  split_communicator.rs  tcp_device.rs
lorawan_device/src/devices/: colosseum_device.rs  debug_device.rs  lorawan_device.rs  mock_device.rs  mod.rs  radio_device.rs  tcp_device.rs  udp_device.rs
network-controller/: Cargo.toml
network-controller/src/: main.rs
network-controller/src/network_controller/: mod.rs  server_parameters.json
network_controller/: Cargo.toml  anomalies.csv  filtered_output.csv  iqr.py  mahalbi copy.py  mahalbi.py  normals.csv  output.csv  piango.txt  touch.js  transformed_filtered.csv  transformed_filtered_normal.csv  zscore.py
network_controller/src/: lib.rs  main.rs
network_controller/src/modules/: anomaly_detector.rs  anomaly_detector_ewma.rs  anomaly_detector_mahalanobis.rs  circular_buffer.rs  downlink_scheduler.rs  error.rs  mod.rs  network_controller.rs
network_controller/src/network_controller/: mod.rs  utils.rs
network_controller/src/utils/: error.rs
preloader/: Cargo.toml  as_config.json  device_colosseum_config.json  device_tcp_config.json  device_udp_config.json  general_config.json  nc_config.json  nc_config_colosseum.json  preloader_cpu_monitor.sh
preloader/src/: device.rs  main.rs  sdr-lora-merged.py  sdr-lora-merged_origin.py
simulation/: Cargo.toml  analyzer.js  bun.lockb  devices_augmented.csv  generate_devices.ts  generator.ts  package-lock.json  package.json
simulation/src/: chirpstack.rs  main.rs  tcp_server.py
