[package]
name = "application_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lorawan = { path = "../lorawan"}
tokio = { version = "1.35.0", features = ["full"] }
hex = "0.4.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
clap = { version = "4.4.11", features = ["derive"] }
thiserror = "1.0.50"
