[package]
name = "blockchain_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
lorawan = {path="../lorawan"}
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
serde = {version = "1.0.193", features= ["derive"]}
async-trait = "0.1.74"
thiserror = "1.0.50"
rand = "0.8.5"
