[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version = "0.11", features = ["gzip", "tls"]}
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lorawan = { path = "../lorawan" }
openssl = "0.10.64"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[build-dependencies]
tonic-build = "0.11"
