[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version = "0.12.2", features = ["gzip", "tls"]}
prost = "0.13.2"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
lorawan = { path = "../lorawan" }
openssl = "0.10.66"
lazy_static = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[build-dependencies]
tonic-build = "0.12.2"
