[package]
name = "fake_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lorawan = { path = "../lorawan"}
hex = "0.4.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
clap = { version = "4.1.7", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
blockchain_api = { path = "../blockchain_api"}
async-trait = "0.1.71"
pyo3 = { version = "0.19.1", features = ["auto-initialize"] }
thiserror = "1.0.47"
