[package]
name = "lorawan_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lorawan = { path = "../lorawan"}
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
blockchain_api = { path = "../blockchain_api"}
# pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
thiserror = "1.0.63"
