[package]
name = "network-controller"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lorawan = { path = "../lorawan"}
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
clap = { version = "4.1.7", features = ["derive"] }
blockchain_api = { path = "../blockchain_api"}
fake_device = { path = "../fake_device"}
rand = "0.8.5"
lazy_static = "1.4.0"
openssl = "0.10.54"
thiserror = "1.0.47"
