[package]
name = "preloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.11", features = ["derive"]}
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.102"
lorawan_device = { path = "../lorawan_device"}
application-server = { path = "../application-server"}
network-controller = { path = "../network-controller"}
lorawan = { path = "../lorawan"}
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
async-trait = "0.1.73"
thiserror = "1.0.47"
rand = "0.8.5"
