[package]
name = "preloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.17", features = ["derive"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
lorawan_device = { path = "../lorawan_device"}
application_server = { path = "../application_server"}
network_controller = { path = "../network_controller"}
blockchain_api = { path = "../blockchain_api"}
consensus = { path = "../consensus"}
lorawan = { path = "../lorawan"}
tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"
async-trait = "0.1.82"
thiserror = "1.0.63"
rand = "0.8.5"
openssl = "0.10.66"
