[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
lorawan = { path = "../lorawan"}
blockchain_api = { path = "../blockchain_api"}
fake_device = { path = "../fake_device"}
rand = "0.8.5"
reqwest = "0.11.14"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
paho-mqtt = "0.12.0"
hex = "0.4.3"
prost = "0.11"
prost-types = "0.11"
thiserror = "1.0.47"

#[build-dependencies]
#prost-build = "0.5"