[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
lorawan = { path = "../lorawan"}
blockchain_api = { path = "../blockchain_api"}
lorawan_device = { path = "../lorawan_device"}
rand = "0.8.5"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
paho-mqtt = "0.12.3"
hex = "0.4.3"
prost = "0.12.3"
prost-types = "0.12.3"
thiserror = "1.0.50"

#[build-dependencies]
#prost-build = "0.5"