[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
lorawan = { path = "../lorawan"}
blockchain_api = { path = "../blockchain_api"}
lorawan_device = { path = "../lorawan_device"}
rand = "0.8.5"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
paho-mqtt = "0.12.5"
hex = "0.4.3"
prost = "0.13.2"
prost-types = "0.13.2"
thiserror = "1.0.63"

#[build-dependencies]
#prost-build = "0.5"